# ttrace

./: CMakeLists.txt  Dockerfile  atrace.pc.in  run_test.sh  ttrace-static.pc.in  ttrace.h.in  ttrace.manifest  ttrace.pc.in
doc/: trace_doc.h
include/: TTraceWrapper.h  trace.h  ttrace.h
packaging/: atrace-bootup.sh  exec-ttrace-marker  ttrace-marker.service  ttrace.conf  ttrace.spec
src/: TTraceWrapper.cpp  trace.c  ttrace.c
src/atrace/: atrace.cpp
